Ahora se agregan los estilos de theme_jorgbot.css

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
       <link rel='stylesheet' href='assets/css/preloader.min.css'/>
       <!-- Custom Stylesheet -->
       <link rel='stylesheet' href='assets/css/style-dist.css'/>
+      <!-- Custom UX jorgbot -->
+      <link rel='stylesheet' href='assets/css/jorgbot_theme.css'/>
 
     </head>
     <body>
