Optmimizacion de recursos, jpg progresivo, png entrelazado, css minificado

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
       <!-- Owl Carousel Stylesheet -->
       <link rel='stylesheet' href='assets/css/owl.carousel.min.css'/>
       <!-- Animate.CSS Stylesheet -->
-      <link rel='stylesheet' href='assets/css/animate.css'/>
+      <link rel='stylesheet' href='assets/css/animate.min.css'/>
       <!-- Animate.CSS Stylesheet -->
       <!-- <link rel='stylesheet' href='assets/css/preloader.min.css'/> -->
       <!-- Custom Stylesheet -->
@@ -506,6 +506,6 @@
       <!-- Font Awesome Stylesheet -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <!-- Custom UX jorgbot -->
-      <link rel='stylesheet' href='assets/css/jorgbot_theme.css'/>
+      <link rel='stylesheet' href='assets/css/jorgbot_theme-dist.css'/>
     </div>
   </html>
